<resources>
    <string name="app_name">ItaBus</string>
    <string name="menu_cadMunicipal">Cad. Municipal</string>
    <string name="menu_cadEmpresa">Cad. Empresa</string>
    <string name="menu_cadHorarios">Cad. Horarios</string>
    <string name="menu_cadRotas">Cad. Rotas</string>

    <string name="botao_acessar">Acessar</string>

    <string-array name="titulos_tag_pesq">
        <item>Início</item>
        <item>Pesquisar</item>
    </string-array>

    <string-array name="titulos_tag_pesqInfo">
        <item>Horários</item>
        <item>Informações</item>
    </string-array>

    <!-- MUNICIPAL -->
    <string name="btagM_pesqbairro">Pesquisar por Bairro</string>
    <string name="btagM_pesqonibus">Pesquisar por Linha</string>
    <string name="edtBairro">Bairro</string>

    <!-- EMPRESA -->
    <string name="btagI_pesqcidade">Pesquisar por Cidade</string>
    <string name="btagI_pesqempresas">Pesquisar por Empresas</string>
    <string name="edtCidade">Cidade</string>
    <string name="edtCodigoE">Código</string>
    <string name="edtNomeE">Nome da Empresa</string>
    <string name="edtSiglaE">Sigla da Empresa</string>
    <string name="edtContatoE">Contato</string>

    <!-- HORÁRIOS -->
    <string name="edtSegunda">Segunda-feira</string>
    <string name="edtTerça">Terça-feira</string>
    <string name="edtQuarta">Quarta-feira</string>
    <string name="edtQuinta">Quinta-feira</string>
    <string name="edtSexta">Sexta-feira</string>
    <string name="edtSabado">Sábado</string>
    <string name="edtDomingo">Domingo e Feriados</string>

    <!-- ROTAS -->
    <string name="edtCodigoR">Código</string>
    <string name="edtLatitudeI">Latitude inicial</string>
    <string name="edtLongitudeI">Longitude inicial</string>
    <string name="edtLatitudeF">Latitude final</string>
    <string name="edtLongitudeF">Longitude final</string>


    <!-- PARA AS DUAS OPÇÕES -->
    <string name="edtPesquisar">PESQUISAR</string>
    <string name="edtCodigo">Código</string>
    <string name="edtTrajeto">Trajeto</string>
    <string name="edtHoriarios">Código do Horário</string>
    <string name="edtItinerario">Código da Rota</string>
    <string name="edtParadas">Paradas</string>
    <string name="edtValorPassagem">Valor da passagem</string>
    <string name="edtAcesso">Acesso PCD</string>

    <string name="title_activity_rotas_maps">ItaBus</string>

</resources>
