<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtPesquisarM"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:hint="@string/edtPesquisar"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imagePesquisarM"
            android:layout_weight="1"
            android:onClick="pesquisarMunicipal"/>
    </LinearLayout>



    <EditText
        android:id="@+id/edtCodigoM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtCodigo"/>
    <EditText
        android:id="@+id/edtBairroM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtBairro"/>
    <EditText
        android:id="@+id/edtHoráriosM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtHoriarios"
        android:inputType="textMultiLine"
        android:lines="4"/>
    <EditText
        android:id="@+id/edtItinerarioM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtItinerario"
        android:inputType="textMultiLine"
        android:lines="2"/>
    <EditText
        android:id="@+id/edtParadasM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtParadas"/>
    <EditText
        android:id="@+id/edtValorPassagemM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtValorPassagem"/>
    <EditText
        android:id="@+id/edtAcessoM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtAcesso"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="Gravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bGravarM"
            android:layout_weight="1"
            android:onClick="salvarMunicipal"/>

        <Button
            android:text="Excluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bExcluirM"
            android:layout_weight="1"
            android:onClick="excluirMunicipal"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>