<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edtPesquisarR"
                android:layout_height="50dp"
                android:hint="@string/edtPesquisar"
                android:layout_width="270dp" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/lupapesq"
                android:scaleType="fitCenter"
                android:background="@null"
                android:id="@+id/imagePesquisarR"
                android:layout_weight="1"
                android:onClick="pesquisarRotas"/>
        </LinearLayout>



        <EditText
            android:id="@+id/edtCodigoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtCodigoR"/>
        <EditText
            android:id="@+id/edtLatitudeI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLatitudeI"/>
        <EditText
            android:id="@+id/edtLongitudeI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLongitudeI" />
        <EditText
            android:id="@+id/edtLatitudeF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLatitudeF"/>
        <EditText
            android:id="@+id/edtLongitudeF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLongitudeF" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="Gravar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bGravarR"
                android:layout_weight="1"
                android:onClick="salvarRotas"
                android:background="#36978e"
                android:elevation="0dp" />

            <Button
                android:text="Excluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bExcluirR"
                android:layout_weight="1"
                android:onClick="excluirRotas"
                android:background="#72b6af" />

            <Button
                android:text="Voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bVoltarR"
                android:layout_weight="1"
                android:onClick="voltarRotas"
                android:background="#36978e" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>