<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/edtPesquisarE"
            android:layout_height="50dp"
            android:hint="@string/edtPesquisar"
            android:layout_width="320dp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/lupapesq"
            android:scaleType="fitCenter"
            android:background="@null"
            android:id="@+id/imagePesquisarE"
            android:onClick="pesquisarEmpresa"/>
    </LinearLayout>



    <EditText
        android:id="@+id/edtCodigoE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtCodigo"/>
    <EditText
        android:id="@+id/edtNomeE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtNomeE"/>
    <EditText
        android:id="@+id/edtSiglaE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtSiglaE" />
    <EditText
        android:id="@+id/edtContatoE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtContatoE"
        android:inputType="textMultiLine"
        android:lines="4"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="Gravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bGravarE"
            android:layout_weight="1"
            android:onClick="salvarEmpresa"
            android:background="#36978e" />

        <Button
            android:text="Excluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bExcluirE"
            android:layout_weight="1"
            android:onClick="excluirEmpresa"
            android:background="#72b6af" />

        <Button
            android:text="Voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bVoltarE"
            android:layout_weight="1"
            android:onClick="voltarM"
            android:background="#36978e" />

    </LinearLayout>

</LinearLayout>
</ScrollView>